1.futurecontext增加report方法 2.工具方法下沉